<resources>
    <string name="app_name">Resham Krishi</string>
    <string name="app_description">Silkworm Disease Detection app</string>
    <string name="tagline">Detect Early. Protect Silkworms. Strengthen Sericulture.</string>
    <string name="camara_int">Capture</string>
    <string name="camara_desc">Take or Upload Image</string>
    <string name="protect">Protect</string>
    <string name="protect_desc">Early Detection, Better Care</string>
    <string name="loading">Loading...</string>
    <string name="logo">logo</string>
    <string name="shield_des">Early Detection,\nBetter Care</string>
    <string name="shield_int">Protect</string>
    <string name="ai_des">AI Powered Analysis</string>
    <string name="ai_int">Detect</string>
    <string name="shield">Shield</string>
    <string name="ai">Ai</string>
    <string name="camara">Camara</string>
    <string name="app_logo">App Logo</string>
    <string name="backgrond_splash_screen">Background Splash Screen</string>
    <string name="disease_detection">Disease Detection</string>
    <string name="language_text">Early detection, Timely action,\nHealthy silkworms,Better yield.</string>
    <string name="footer_language">You can change the language later in Settings</string>
    <string name="btn_continue">Continue</string>
    <string name="choose_your_language">Choose Your Language</string>
    <string name="background_language_screen">Background Language Screen</string>
    <string name="language">Language</string>
    <string name="select_your_preferred_language_to_continue">Select your preferred language</string>
    <string name="en">EN</string>
    <string name="english">English</string>
    <string name="hindi_icon">हि</string>
    <string name="hindi">हिंदी (Hindi)</string>
    <string name="bengali_icon">বা</string>
    <string name="bengali">বাংলা (Bengali)</string>
    <string name="kannada">ಕನ್ನಡ (Kannada)</string>
    <string name="kannada_icon">ಕ</string>
    <string name="description">Detect silkworm diseases early,\ntake timely action and improve\nyour crop productivity.</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome back! Please sign in to continue.</string>
    <string name="healthy_silkworms_better_future">Healthy Silkworms, Better Future</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_des">Enter your email</string>
    <string name="password_des">Enter your password</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="skip">Skip</string>
    <string name="join_the_community">Join the Community</string>
    <string name="app_des_2"><![CDATA[For Healthy Silkworms\n& Better Yields]]></string>
    <string name="app_des_1">Detect diseases early, get expert support,\nand grow your sericulture business\nwith confidence.</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="sign_up_des">Sign up to get started</string>
    <string name="already_have_a_account">Already have a account!</string>
    <string name="full_name_des">Enter Your Full Name</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="password_reset_nsuccessful">Password Reset Successful!</string>
    <string name="go_to_sign_in">Go to Sign In</string>
    <string name="your_password_has_been_reset_successfully_you_can_now_sign_in_with_your_new_password">Your password has been reset successfully. You can now sign in with your new password.</string>
    <string name="at_least_6_characters">🟢 At least 6 characters</string>
    <string name="one_uppercase_letter">🟢 One uppercase letter</string>
    <string name="one_number_or_special_character">🟢 One number or special character</string>
    <string name="resend_link">Resend Link</string>
    <string name="scan_details">Scan\nDetails</string>
    <string name="diseases_guide">Diseases\nGuide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>