<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/splash_screen"
    android:fitsSystemWindows="false"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingBottom="20dp"
    tools:context=".SplashActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        android:background="@drawable/circle_bg_all"
        android:src="@drawable/app_logo_resham_krishi" />

    <!-- App Name -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/primary_green"
        android:textSize="36sp" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/app_description"
        android:textColor="@color/light_green"
        android:textSize="22sp" />

    <!-- Tagline -->
    <TextView
        android:id="@+id/tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/tagline"
        android:textColor="@color/text_dark"
        android:textSize="18sp" />

    <!-- Main Scan Image -->
    <ImageView
        android:id="@+id/scanLogoImage"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/splash_screen_scan_logo" />

    <!-- Features Card -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/feature_circle_bg_splash"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="3">

        <!-- Capture -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:background="@drawable/circle_bg_all"
                android:contentDescription="@string/camara"
                android:padding="5dp"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/camara_int"
                android:textColor="@color/primary_green"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/camara_desc"
                android:textColor="@color/primary_green"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="2dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/divider_color" />

        <!-- Detect -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:background="@drawable/circle_bg_all"
                android:contentDescription="@string/ai"
                android:padding="5dp"
                android:src="@drawable/ai_logo"
                app:tint="@color/primary_green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/ai_int"
                android:textColor="@color/primary_green"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/ai_des"
                android:textColor="@color/primary_green"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="2dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/divider_color" />

        <!-- Protect -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="121dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:background="@drawable/circle_bg_all"
                android:contentDescription="@string/shield"
                android:padding="8dp"
                android:src="@drawable/ic_shield" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/shield_int"
                android:textColor="@color/primary_green"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/shield_des"
                android:textColor="@color/primary_green"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <!-- Loading -->
    <TextView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button_green"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/loading"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

</LinearLayout>