<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Background -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sign_in_background"
        android:scaleType="centerCrop"/>

    <!-- Overlay -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_overlay"
        android:alpha="0.35"/>

    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="40dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:layout_marginBottom="45sp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_logo"
            android:background="@drawable/circle_bg_all"
            android:src="@drawable/app_logo_resham_krishi" />

        <!-- App Name -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/primary_green"
            android:textSize="36sp" />

        <!-- Divider -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@color/primary_green"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="8dp"
                android:src="@drawable/ic_leaf_green" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@color/primary_green"/>
        </LinearLayout>

        <!-- Tagline -->
        <TextView
            android:id="@+id/tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/healthy_silkworms_better_future"
            android:textColor="@color/text_dark"
            android:textSize="20sp" />

        <!-- Sign In Card -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_card"
            android:orientation="vertical"
            android:padding="20dp"
            android:elevation="8dp">

            <!-- Heading -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/primary_green"
                android:textSize="36sp"
                android:fontFamily="@font/poppins_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/light_text"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"/>

            <!-- Email -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/primary_green"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/language_item_selector"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_mail" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_des"
                    android:paddingStart="10dp"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:textColorHint="@color/light_text"
                    android:inputType="textEmailAddress"
                    android:layout_marginEnd="20dp"/>
            </LinearLayout>

            <!-- Password -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/primary_green"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/language_item_selector"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_password_pw"  />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="220dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password_des"
                    android:paddingStart="10dp"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:textColorHint="@color/light_text"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/imgEye"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_eye_closed" />

            </LinearLayout>

            <!-- Forgot Password -->
            <TextView
                android:id="@+id/txtForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/accent_red"
                android:fontFamily="@font/poppins_semibold"
                android:layout_gravity="end" />

            <!-- Sign In Button -->
            <Button
                app:backgroundTint="@null"
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_button_green"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:padding="5dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="28sp"
                android:elevation="5dp"/>

            <!-- Divider -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/light_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/light_text"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_medium"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/light_text" />
            </LinearLayout>

            <!-- Google Button -->
            <LinearLayout
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/bg_button_white"
                android:gravity="center"
                android:orientation="horizontal"
                android:elevation="3dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_with_google"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/primary_green"
                    android:layout_marginStart="10dp"
                    android:textSize="20dp"/>
            </LinearLayout>

            <!-- Sign Up -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/light_text"
                    android:fontFamily="@font/poppins_regular"/>

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:paddingStart="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/accent_red" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="top|center">

            <LinearLayout
                android:id="@+id/btnSignInPage"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:padding="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_button_green"
                android:gravity="top|center"
                android:orientation="horizontal"
                android:elevation="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    android:textSize="28sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSignUpPage"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:background="@drawable/bg_button_white"
                android:gravity="top|center"
                android:orientation="horizontal"
                android:elevation="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/primary_green"
                    android:layout_marginBottom="10dp"
                    android:textSize="28sp"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>