<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/check_email"
    android:paddingTop="150dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="60dp">

    <!-- Top Illustration -->
    <ImageView
        android:id="@+id/imgEmail"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/reset_sucessful_img" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_gravity="center"
            android:text="@string/password_reset_nsuccessful"
            android:textAlignment="center"
            android:textColor="@color/primary_green"
            android:textSize="32sp"
            android:fontFamily="@font/poppins_bold" />

        <!-- Description -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/your_password_has_been_reset_successfully_you_can_now_sign_in_with_your_new_password"
            android:textColor="@color/text_dark"
            android:textSize="16sp" />

        <!-- Sign In Button -->
        <Button
            android:id="@+id/btnGoToSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:backgroundTint="@null"
            android:layout_marginTop="45dp"
            android:background="@drawable/bg_button_green"
            android:text="@string/go_to_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:fontFamily="@font/poppins_bold" />

    </LinearLayout>
